Rebrand and reset version numbers

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/foundation.css">
   <link rel="stylesheet" type="text/css" href="icons/foundation-icons.css">
   <link rel="stylesheet" type="text/css" href="css/copay.css">
-  <title>urv2 - Multisignature Wallet</title>
+  <title>Unicoisa - Multisignature Wallet</title>
   <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body ng-cloak class="ng-cloak">
