--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en" ng-controller="indexController as index" >
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,13 +9,12 @@
   <link rel="stylesheet" type="text/css" href="css/foundation.css">
   <link rel="stylesheet" type="text/css" href="icons/foundation-icons.css">
   <link rel="stylesheet" type="text/css" href="css/copay.css">
-  <title>Unicoisa - Multisignature Wallet</title>
+  <title ng:bind-template="{{index.instanceName}} - Multisignature Asset Wallet">Multisignature Asset Wallet</title>
   <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body ng-cloak class="ng-cloak">
 
   <div class="page" 
-    ng-controller="indexController as index" 
     ng-swipe-disable-mouse 
     ng-swipe-left="index.closeMenu()"
     ng-swipe-right="index.openMenu()">
