--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en" ng-controller="indexController as index" >
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,20 +9,20 @@
   <link rel="stylesheet" type="text/css" href="css/foundation.css">
   <link rel="stylesheet" type="text/css" href="icons/foundation-icons.css">
   <link rel="stylesheet" type="text/css" href="css/copay.css">
-  <title>Unicoisa - Multisignature Wallet</title>
+  <title ng:bind-template="{{index.instanceName}} - Multisignature Asset Wallet">Multisignature Asset Wallet</title>
   <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body ng-cloak class="ng-cloak">
 
-  <div class="page" ng-controller="indexController as index">
-    <div notifications="right top"></div> 
+  <div class="page">
+    <div notifications="right top"></div>
     <div ng-include="'views/includes/tx-details.html'" ng-if="index.showTx"></div>
     <div ng-include="'views/includes/password.html'" ng-if="index.askPassword"></div>
     <div ng-include="'views/includes/alert.html'" ng-if="index.showAlert"></div>
     <div ng-include="'views/includes/confirm-tx.html'" ng-if="index.confirmTx"></div>
-    
+
     <div class="off-canvas-wrap" id="off-canvas-wrap"
-      ng-swipe-disable-mouse 
+      ng-swipe-disable-mouse
       ng-swipe-left="index.closeMenu()"
       ng-swipe-right="index.openMenu()">
       <div class="inner-wrap">
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-  
+
   <script src="lib/angular.js"></script>
 
   <!-- DO NOT DELETE THIS COMMET  -->
