--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/foundation.css">
   <link rel="stylesheet" type="text/css" href="icons/foundation-icons.css">
   <link rel="stylesheet" type="text/css" href="css/copay.css">
-  <title ng:bind-template="{{index.instanceName}} - Multisignature Asset Wallet">Multisignature Asset Wallet</title>
+  <title ng:bind-template="{{index.instanceName|rawHtml}} - Multisignature Asset Wallet">Multisignature Asset Wallet</title>
   <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body ng-cloak class="ng-cloak">
