Use dynamic wallet config

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   <!-- DO NOT DELETE THIS COMMET  -->
   <!-- PLACEHOLDER: CORDOVA SRIPT -->
 
-  <script src="js/config.js"></script>
+  <script src="config.js"></script>
   <script src="js/copay.js"></script>
 
 </body>
